# newsy

./: .gitignore  README.md  pyproject.toml
newsy/: cli.py  constants.py  models.py
tests/: test_newsy.py
