[tool.poetry]
name = "newsy"
version = "0.1.0"
description = ""
authors = ["Michael Simpson <michael@snthesis.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.1.0"
httpx = "^0.12.1"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.770"
pytest-mock = "^2.0.0"
pytest-watch = "^4.2.0"
isort = "^4.3.21"

[tool.poetry.scripts]
newsy = "newsy.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
